[package]
name = "autoturret"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
public-ip = {version = "0.2"}
tokio = {version = "1.27.0", features = ["full"]}
dns-lookup = {version = "2.0.0"}
reqwest = {version = "0.11.16", features = ["stream"]}
serde_json = {version = "1.0.96"}
filepath = {version = "0.1.2"}
futures-util = {version = "0.3.27"}
rusqlite = { version = "0.29.0", features = ["bundled"] }
blake3 = {version = "1.3.3", features = ["rayon"]}
colored = {version = "2.0.0"}
daemonize = {version = "0.5.0"}